# cinder

./: Cargo.toml  README.md
crates/cinder-core/: Cargo.toml
crates/cinder-core/src/: config.rs  lib.rs  store.rs  taskplan.rs
crates/cinder-runtime/: Cargo.toml
crates/cinder-runtime/src/: config.rs  lib.rs  taskplan.rs  tools.rs
crates/cinder-runtime/system_prompts/: cinder_agent.md
crates/cinder-runtime/tests/: e2e.rs
crates/cinder-runtime/tool_descriptions/: get_task.md  list_agents.md  spawn_task_plan.md  spawn_task_plan.schema.json  submit_task.md  submit_task.schema.json
crates/cinder-store-postgres/: Cargo.toml
crates/cinder-store-postgres/src/: lib.rs
crates/cinder-store-sqlite/: Cargo.toml
crates/cinder-store-sqlite/src/: lib.rs
docs/: config-store-implementation-plan.md
examples/axum-embedding/: Cargo.toml
examples/axum-embedding/src/: main.rs
examples/math-proof-solver/: Cargo.toml  README.md  cinder.toml
examples/math-proof-solver/output/: latest-result.json
examples/math-proof-solver/prompts/agents/: curriculum.md  formal_verifier.md  literature.md  math_solver.md  pedagogy.md  rigor_critic.md
examples/math-proof-solver/src/: main.rs
examples/math-proof-taskplan/: Cargo.toml  README.md  cinder.toml
examples/math-proof-taskplan/src/: main.rs
migrations/: 0001_init.sql
scripts/: run_e2e.sh  start_postgres.sh
