[package]
name = "cinder-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cinder-core = { path = "../cinder-core" }
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
cinder-store-postgres = { path = "../cinder-store-postgres" }
cinder-store-sqlite = { path = "../cinder-store-sqlite" }
sqlx.workspace = true
