[package]
name = "cinder-math-proof-solver"
edition = "2021"
license = "MIT"
version = "0.1.0"

[dependencies]
anyhow = "1"
cinder-core = { path = "../../crates/cinder-core" }
cinder-runtime = { path = "../../crates/cinder-runtime" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
