[package]
name = "cinder-math-proof-taskplan"
edition = "2021"
license = "MIT"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
cinder-core = { path = "../../crates/cinder-core" }
cinder-runtime = { path = "../../crates/cinder-runtime" }
cinder-store-postgres = { path = "../../crates/cinder-store-postgres" }
cinder-store-sqlite = { path = "../../crates/cinder-store-sqlite" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
